refactored index.html

--- a/note-pad/index.html
+++ b/note-pad/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
-	<title>note-pad</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width">
+	<title>mikinano7.gitHub.io - note-pad</title>
+	<meta charset='utf-8'>
 	<script type="text/javascript" src="js/libs/jquery/jquery.min.js"></script>
 </head>
 
 <body>
+
     <h1>note-pad</h1>
     <textarea id="memo" rows="10" cols="50" name="memo"></textarea>
     <p>
@@ -37,5 +38,6 @@
                 })();
             });
     </script>
+
 </body>
 </html>
