--- a/kokonatsu/index.html
+++ b/kokonatsu/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html style="height:100%">
 
   <head>
       <title>mikinano7.gitHub.io - kokonatsu</title>
       <meta charset='utf-8'>
   </head>
 
-  <object data="http://clochette-soft.jp/kokonatsu/index.html" type="text/html" width="100%" height="100%"></object>
+  <!-- override user agent stylesheet -->
+  <body style="display:inline; margin:0px; height:100%;">
+      <object data="http://clochette-soft.jp/kokonatsu/index.html" type="text/html" width="100%" height="100%"></object>
+  </body>
 
 </html>
