--- a/kokonatsu/index.html
+++ b/kokonatsu/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html style="height:100%">
+<html>
 
   <head>
       <title>mikinano7.gitHub.io - kokonatsu</title>
       <meta charset='utf-8'>
+      <link rel="stylesheet" href="../stylesheets/kokonatsu.css">
   </head>
 
   <!-- override user agent stylesheet -->
-  <body style="display:inline; margin:0px; height:100%;">
+  <body>
       <object data="http://clochette-soft.jp/kokonatsu/index.html" type="text/html" width="100%" height="100%"></object>
   </body>
 
