refactor index.html and remove note-pad.

--- a/index.html
+++ b/index.html
@@ -1,62 +1,70 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
+<head>
     <title>mikinano7.github.io</title>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="mikinano7.github.io : ">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/mikinano7">View on GitHub</a>
+<!-- HEADER -->
+<div id="header_wrap" class="outer">
+    <header class="inner">
+        <h1 id="project_title">mikinano7.github.io</h1>
+    </header>
+</div>
 
-          <h1 id="project_title">mikinano7.github.io</h1>
-          <h2 id="project_tagline"></h2>
+<!-- MAIN CONTENT -->
+<div id="main_content_wrap" class="outer">
+    <section id="main_content" class="inner">
 
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <!-- ABOUT -->
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+            <a id="about" class="anchor" href="#about" aria-hidden="true">
+                <span class="octicon octicon-link"></span>
+            </a>
+            About
+        </h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+        <p>
+            <img src="./images/yuno_heart.png" width="100px" height="100px">
+            <font size="5">
+                I'm cheering <a href="http://clochette-soft.jp/">Clochette-Soft</a>.
+            </font>
+        </p>
 
-<h3>
-    <a id="map" class="anchor" href="#map" aria-hidden="true">
-        <span class="octicon octicon-link">
+        <p>
+            Twitter: <a href="https://twitter.com/mikinano7">@mikinano7</a><br/>
+            GitHub: <a href="https://github.com/mikinano7">mikinano7</a>
+        </p>
 
-        </span>
-    </a>
-    Page Map
-</h3>
+        <!-- Site Map -->
+        <h3>
+            <a id="map" class="anchor" href="#map" aria-hidden="true">
+                <span class="octicon octicon-link"></span>
+            </a>
+            Site Map
+        </h3>
 
-<ul>
-    <li>
-        <p><a href="./note-pad">note-pad</a></p>
-    </li>
-    <li>
-        <p><a href="./kokonatsu">kokonatsu</a></p>
-    </li>
-</ul>
+        <ul>
+            <li>
+                <p><a href="./kokonatsu">kokonatsu</a></p>
+            </li>
+        </ul>
 
-      </section>
-    </div>
+    </section>
+</div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
+<!-- FOOTER  -->
+<div id="footer_wrap" class="outer">
+    <footer class="inner">
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
+    </footer>
+</div>
 
-  </body>
+</body>
 </html>
