add product link of sakigake.

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <section id="main_content" class="inner">
 
         <!-- ABOUT -->
-        <h3>
+        <h2>
             <a id="about" class="anchor" href="#about" aria-hidden="true">
                 <span class="octicon octicon-link"></span>
             </a>
             About
-        </h3>
+        </h2>
 
         <p>
             <img src="./images/yuno_heart.png" width="100px" height="100px">
@@ -43,18 +43,23 @@
         </p>
 
         <!-- Site Map -->
-        <h3>
+        <h2>
             <a id="map" class="anchor" href="#map" aria-hidden="true">
                 <span class="octicon octicon-link"></span>
             </a>
             Site Map
-        </h3>
+        </h2>
 
-        <ul>
-            <li>
-                <p><a href="./kokonatsu">kokonatsu</a></p>
-            </li>
-        </ul>
+        <p>
+            <a href="./kokonatsu">
+                <img src="./images/kokonatsu.jpg" alt="ここから夏のイノセンス！" />
+            </a>
+        </p>
+        <p>
+            <a href="./sakigake">
+                <img src="./images/sakigake.jpg" alt="サキガケ⇒ジェネレーション！" />
+            </a>
+        </p>
 
     </section>
 </div>
