add more products of Clochette-Soft.

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <section id="main_content" class="inner">
 
         <!-- ABOUT -->
-        <h2>
+        <h1>
             <a id="about" class="anchor" href="#about" aria-hidden="true">
                 <span class="octicon octicon-link"></span>
             </a>
             About
-        </h2>
+        </h1>
 
         <p>
             <img src="./images/yuno_heart.png" width="100px" height="100px">
@@ -42,13 +42,13 @@
             GitHub: <a href="https://github.com/mikinano7">mikinano7</a>
         </p>
 
-        <!-- Site Map -->
-        <h2>
-            <a id="map" class="anchor" href="#map" aria-hidden="true">
+        <!-- Clochette -->
+        <h1>
+            <a id="map" class="anchor" href="#clochette" aria-hidden="true">
                 <span class="octicon octicon-link"></span>
             </a>
-            Site Map
-        </h2>
+            Products of Clochette-Soft
+        </h1>
 
         <p>
             <a href="./kokonatsu">
@@ -59,6 +59,18 @@
             <a href="./sakigake">
                 <img src="./images/sakigake.jpg" alt="サキガケ⇒ジェネレーション！" />
             </a>
+        </p>
+        <p>
+            <img src="./images/yuno_foolish.png" width="100px" height="100px">
+            <font size="5">
+                <a href="http://clochette-soft.jp/top.html" target="_blank">and more products.</a>
+            </font>
+        </p>
+        <p>
+            <img src="./images/yuno_surprise.png" width="100px" height="100px">
+            <font size="5">
+                <a href="http://clochette-soft.jp/html/relatedproduct/" target="_blank">and related goods.</a>
+            </font>
         </p>
 
     </section>
